dark mode improvements, navbar dark fixes

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -620,7 +620,7 @@ $tooltip-padding-x: var(--#{$prefix}spacer-2) !default;
 $loader-size: 2.5rem !default;
 
 // Lists
-$list-group-header-bg: var(--#{$prefix}light) !default;
+$list-group-header-bg: var(--#{$prefix}bg-surface-tertiary) !default;
 $list-group-header-color: var(--#{$prefix}muted) !default;
 
 $list-group-border-color: var(--#{$prefix}border-color) !default;
@@ -646,7 +646,7 @@ $modal-header-padding: 1.5rem !default;
 $modal-header-height: 3.5rem !default;
 $modal-header-border-width: var(--#{$prefix}border-width) !default;
 $modal-header-border-color: var(--#{$prefix}border-color) !default;
-$modal-header-bg: $white !default;
+$modal-header-bg: transparent !default;
 $modal-inner-padding: 1.5rem !default;
 
 $modal-footer-border-width: var(--#{$prefix}border-width) !default;
